Changes in Caudium 1.5.1 since Caudium 1.4.1
---------------------------------------------
- Fixed emit->maxrows and emit->skiprows
   (Bill Welliver)
- Added emit->sort_function and emit->sort_key to sort query results
   Example usage: sort_function="Array.oid_sort_func" sort_key="version"
   where sort_function is the name of a function compatible with 
   Array.sort_array, and sort_key is the name of a field in the resultset 
   to sort by.
   (Bill Welliver)
- Backported VHS SQLogger from 1.2. Same warnings as for 1.4 branch....
   (Xavier Beaudouin)
- Fixed bug #11
   (Xavier Beaudouin)
- Because of changes in Pike 7.6.24+ that have been not compatible with
  it self, we requires now 7.6.24 now.
   (Xavier Beaudouin)
- Fix installation script that has been stop to work with pike 7.6.24+
   (Xavier Beaudouin)
- Add Index redirect files option that allow people that use L7 load balancers
  to redirect to files that have been specified instead of listing the
  directory.
   (Xavier Beaudouin)
- Fix error on vhs_dirparser when there is no files on directory and that
  option "show dot files" is set to no
   (Xavier Beaudouin)
- The watchdog now really take care of the port configuration for each virtual
  server instead of guessing it from the server URI. As a consequence, the
  watchdog can now check multiple HTTP ports for a virtual server.
  Checks are made on the protocol used as well as on the binded interface
  before adding a new virtual server/port to the watch list.
  This fixes a bug where the watchdog would restart Caudium ever and ever on a
  fresh install until some virtual server binds to the port 80.
   (Bertrand LUPART)
- Fixed a watchdog backtrace on fresh install when there are no virtual server
  set up in the CIF, yet.
   (Bertrand LUPART)
- Starting Caudium with --gdb now turns the watchdog off.
   (Bertrand LUPART)
- Some work on accessed-sql:
  - now 2nd level virtual hosting safe