@@ -69,39 +69,7 @@ int getppid()
 #endif
 
 #if constant(syslog)
-#define  LOG_CONS   (1<<0)
-#define  LOG_NDELAY (1<<1)
-#define  LOG_PERROR (1<<2)
-#define  LOG_PID    (1<<3)
-
-#define  LOG_AUTH    (1<<0)
-#define  LOG_AUTHPRIV (1<<1)
-#define  LOG_CRON    (1<<2)
-#define  LOG_DAEMON  (1<<3)
-#define  LOG_KERN    (1<<4)
-#define  LOG_LOCAL  (1<<5)
-#define  LOG_LOCAL1  (1<<6)
-#define  LOG_LOCAL2  (1<<7)
-#define  LOG_LOCAL3  (1<<8)
-#define  LOG_LOCAL4  (1<<9)
-#define  LOG_LOCAL5  (1<<10)
-#define  LOG_LOCAL6  (1<<11)
-#define  LOG_LOCAL7  (1<<12)
-#define  LOG_LPR     (1<<13)
-#define  LOG_MAIL    (1<<14)
-#define  LOG_NEWS    (1<<15)
-#define  LOG_SYSLOG  (1<<16)
-#define  LOG_USER    (1<<17)
-#define  LOG_UUCP    (1<<18)
-
-#define  LOG_EMERG   (1<<0)
-#define  LOG_ALERT   (1<<1)
-#define  LOG_CRIT    (1<<2)
-#define  LOG_ERR     (1<<3)
-#define  LOG_WARNING (1<<4)
-#define  LOG_NOTICE  (1<<5)
-#define  LOG_INFO    (1<<6)
-#define  LOG_DEBUG   (1<<7)
+#include <syslog.h>
 int use_syslog, loggingfield;
 #endif
 
