@@ -1,5 +1,7 @@
 Changes in Caudium 1.5.1 since Caudium 1.4.1
 ---------------------------------------------
+- Fixed syslog to work as it is advertized on CIF
+   (Xavier Beaudouin)
 - Fixed emit->maxrows and emit->skiprows
    (Bill Welliver)
 - Added emit->sort_function and emit->sort_key to sort query results
